--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jwt-decode": "^3.1.2",
@@ -21,6 +22,7 @@
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "use-places-autocomplete": "^4.0.1"
   }
 }
